@@ -4,6 +4,9 @@ BuildingsPy Changelog
 Version 5.2.0, xxxx
 ^^^^^^^^^^^^^^^^^^^
 
+- In buildingspy/development/merger.py, added new comment form to allow excluding
+  Modelica code for certain libraries.
+  (https://github.com/lbl-srg/BuildingsPy/issues/566)
 - In buildingspy/development/regressiontest.py, add option to create reference
   results in batch mode.
   (https://github.com/lbl-srg/BuildingsPy/issues/560)
